# Project-IMO

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.toml
contracts/: IMOGovernance.sol  IMOToken.sol
src/imo/: __init__.py
src/imo/cli/: main.py
src/imo/data/: __init__.py  aggregator.py  dataset_spec.py  linter.py  privacy.py  provenance.py  security.py
src/imo/node/: __init__.py  auth.py  communicator.py  discovery.py  manager.py  scheduler.py  transport.py
src/imo/protocol/: __init__.py  contribution.py  imo.py  project.py  registry.py  voting.py
src/imo/toolkits/: __init__.py  base.py  registry.py
src/imo/toolkits/builtin/: __init__.py  ai_toolkit.py  axolotl.py  diffusers.py  hf_trainer.py  musubi.py  unsloth.py
src/imo/training/: __init__.py  aggregator.py  checkpoint.py  engine.py  pipeline.py  preflight.py  security.py  verifier.py
tests/test_cli/: test_commands.py
tests/test_data/: test_dataset_spec.py  test_linter.py
tests/test_protocol/: test_contribution.py
tests/test_toolkits/: test_registry.py
tests/test_training/: test_engine_toolkit.py
