[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imo"
version = "0.1.0"
description = "Decentralized AI training platform — Initial Model Offering"
readme = "ARCHITECTURE.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "hivemind>=1.1.0",
    "torch>=2.0",
    "transformers>=4.30",
    "datasets>=2.14",
    "web3>=6.0",
    "opacus>=1.4",
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.scripts]
imo = "imo.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/imo"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = [
    "diffusers.*",
    "accelerate.*",
    "axolotl.*",
    "unsloth.*",
    "peft.*",
    "hivemind.*",
    "opacus.*",
    "web3.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
